edit credits and fix credits css alignment

--- a/stylesheets/menus.css
+++ b/stylesheets/menus.css
@@ -52,7 +52,7 @@
 .credits-roles {
     font-size: 20pt;
     margin-top: 0;
-    margin-bottom: 0;
+    margin-bottom: 5pt;
 }
 
 .credits button {
